Screen sharing function working. Layout issue for swapping while sharing. Still problem with recording.

--- a/staticfiles/users/css/styles.css
+++ b/staticfiles/users/css/styles.css
@@ -138,14 +138,6 @@ body {
     padding: 0;
     overflow: hidden;
   }
-  
-  .video-player {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px;
-  }
-
 
   /* ================== Video Sizing ================== */
 .video-large {
@@ -160,7 +152,7 @@ body {
     position: absolute;
     top: 10px;
     right: 10px;
-    width: 20%;
+    width: 25%;
     height: auto;
     cursor: pointer;
     border: 2px solid #f5f5f5;
@@ -174,18 +166,6 @@ body {
 }
 
 /* ================== Shared Screen Styles ================== */
-
-.shared-screen {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 25%;
-    height: auto;
-    border: 2px solid #f5f5f5;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
   .shared-screen.d-none {
     display: none;
   }
